# QCefView

./: .clang-format  .gitignore  CMakeLists.txt  QCefView.sln  _config.yml  config.cmake  disabled-index.md  index.html  index.md  params.json  readme.md  readme.txt
.github/: FUNDING.yml
dep/: README.md  change_cef_version.txt
dep/cef/: README.md  cef_binary_3.2526.1373.gb660893_windows32.txt
dep/cef/lib/Debug/: libcef.lib
license/: LICENSE
src/: qcefview.common.props
src/QCefProto/: CMakeLists.txt  QCefProtocol.cpp  QCefProtocol.h
src/QCefView/: CCefManager.cpp  CCefManager.h  CCefSetting.cpp  CCefSetting.h  CCefWindow.cpp  CCefWindow.h  CMakeLists.txt  QCefEvent.cpp  QCefQuery.cpp  QCefSchemeHandler.cpp  QCefSetting.cpp  QCefView.cpp  QCefView.rc  QCefView.vcxproj  QCefView.vcxproj.filters  stdafx.h
src/QCefView/CefViewBrowserApp/: QCefQueryHandler.cpp  QCefQueryHandler.h  QCefViewBrowserApp.cpp  QCefViewBrowserApp.h  QCefViewBrowserAppHelper.cpp  QCefViewBrowserHandler.cpp  QCefViewBrowserHandler.h  QCefViewDelegate.h
src/QCefView/CefViewBrowserApp/BrowserDelegates/: QCefViewDefaultBrowserDelegate.cpp  QCefViewDefaultBrowserDelegate.h
src/QCefView/CefViewBrowserApp/SchemeHandlers/: QCefViewDefaultSchemeHandler.cpp  QCefViewDefaultSchemeHandler.h  QCefViewDelegatedSchemeHandler.cpp  QCefViewDelegatedSchemeHandler.h
src/QCefView/GeneratedFiles/Debug/: moc_CCefManager.cpp  moc_CCefWindow.cpp  moc_QCefEvent.cpp  moc_QCefView.cpp
src/QCefView/GeneratedFiles/Release/: moc_CCefManager.cpp  moc_CCefWindow.cpp  moc_QCefEvent.cpp  moc_QCefView.cpp
src/QCefView/Include/: QCefEvent.h  QCefQuery.h  QCefSchemeHandler.h  QCefSetting.h  QCefView.h
src/QCefView/Resources/: gxxcefview.rc
src/QCefView/inc/: QCefEvent.h  QCefQuery.h  QCefSetting.h  QCefView.h
src/QCefWing/: CMakeLists.txt  QCefWing.cpp  QCefWing.manifest  QCefWing.rc  resource.h
src/QCefWing/CefViewRenderApp/: QCefViewRenderApp.cpp  QCefViewRenderApp.h
src/QCefWing/CefViewRenderApp/RenderDelegates/: QCefClient.cpp  QCefClient.h  QCefViewDefaultRenderDelegate.cpp  QCefViewDefaultRenderDelegate.h
src/Shared/: QCefCommon.h  Shared.vcxitems
src/public/: QCefCommon.h
src/qtcefwing/: qtcefwing.cpp  qtcefwing.rc  qtcefwing.vcxproj  qtcefwing.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
src/qtcefwing/CefViewRenderApp/: QCefViewRenderApp.cpp  QCefViewRenderApp.h
src/qtcefwing/CefViewRenderApp/RenderDelegates/: QCefClient.cpp  QCefClient.h  QCefClientAccessor.cpp  QCefClientAccessor.h  QCefClientObject.cpp  QCefClientObject.h  QCefClientObjectManager.cpp  QCefClientObjectManager.h  QCefClientV8Handler.cpp  QCefClientV8Handler.h  QCefViewDefaultRenderDelegate.cpp  QCefViewDefaultRenderDelegate.h
test/QCefViewTest/: CMakeLists.txt  QCefViewTestPage.html  customcefview.cpp  customcefview.h  customschemehandler.cpp  customschemehandler.h  qcefviewtest.cpp
test/src/QCefViewTest/: QCefViewTest.vcxproj  QCefViewTest.vcxproj.filters  QCefViewTestPage.html  customcefview.cpp  customcefview.h  main.cpp  qcefviewtest.cpp  qcefviewtest.h  qcefviewtest.qrc  qcefviewtest.ui
test/src/QCefViewTest/GeneratedFiles/: qrc_qcefviewtest.cpp  ui_qcefviewtest.h
test/src/QCefViewTest/GeneratedFiles/Debug/: moc_qcefviewtest.cpp
test/src/QCefViewTest/GeneratedFiles/Release/: moc_qcefviewtest.cpp
